5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1592_1801.log
== TEST (2019-06-13 12:19:30) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
z = ("abra" x*n)
print(z)
-- ERROR:
File "XXXX", line 3
    z = ("abra" x*n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:19:42) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
z = ("abra"+x*n)
print(z)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:20:02) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
z = ("abra "+x*n)
print(z)
-- EXECUTION TIME:
0.797857
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:20:05) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
z = ("abra "+x*n)
print(z)
-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:20:58) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
z = (abra+x*n)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z = (abra+x*n)
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:21:26) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))
abra="abra"
z = (abra+x*n)
print(z)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:22:29) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = ("abra + x*n")
print(z)
-- OUTPUT:
abra + x*n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:23:21) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("abra" + x)*n)
print(z)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:23:35) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("abra " + x)*n)
print(z)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:23:45) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("abra " + x)*n)
print(z)
-- EXECUTION TIME:
0.873879
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carroabra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:23:57) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("Abra " + x)*n)
print(z)
-- EXECUTION TIME:
0.732883
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
nome do objeto: numero de repeticoes: Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
nome do objeto: numero de repeticoes: Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
nome do objeto: numero de repeticoes: Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:24:14) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("Abra " + x)*n)
print(z)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:24:38) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("Abra " + x" ")*n)
print(z)
-- ERROR:
File "XXXX", line 4
    z = (("Abra " + x" ")*n)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:24:45) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("Abra " + x +" ")*n)
print(z)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:24:55) 
-- CODE:
x = input("nome do objeto: ")
n = int(input("numero de repeticoes: "))

z = (("Abra " + x +" ")*n)
print(z)
-- EXECUTION TIME:
0.710191
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
